--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "*"
-      ]
-    }
+    "baseUrl": "."
   },
   "include": [
     "next-env.d.ts",
