--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "b369-ai",
   "private": true,
-  "version": "5.0.0-lite",
+  "version": "6.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+  },
+  "engines": {
+    "node": ">=20 <21"
   },
   "dependencies": {
     "next": "15.0.0",
