--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "b369-ai",
   "private": true,
-<<<<<<< HEAD
-  "version": "6.0.0",
+  "version": "6.0.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,14 +15,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
-=======
-  "version": "5.0.0-lite",
-  "scripts": { "dev":"next dev", "build":"next build", "start":"next start" },
-  "dependencies": { "next":"15.0.0", "react":"18.3.1", "react-dom":"18.3.1" },
->>>>>>> 498bff203ccdfeec93abf50005e4921202812e2d
   "devDependencies": {
-    "autoprefixer":"^10.4.20","postcss":"^8.4.47","tailwindcss":"^3.4.14",
-    "typescript":"^5.6.2","@types/node":"^22.7.4","@types/react":"^18.3.8","@types/react-dom":"^18.3.0",
-    "@netlify/plugin-nextjs":"^5.9.1"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.2",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "@netlify/plugin-nextjs": "^5.9.1"
   }
 }
+
