--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "b369-ai",
   "private": true,
-  "version": "6.0.1",
+  "version": "6.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-  "engines": {
-    "node": ">=20 <21"
-  },
+  "engines": { "node": ">=20 <21" },
   "dependencies": {
     "next": "15.0.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "leaflet": "1.9.4"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.2",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "@netlify/plugin-nextjs": "^5.9.1"
+    "@types/react-dom": "^18.3.0"
   }
 }
-
