--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "b369-ai",
   "private": true,
-  "version": "6.1.0",
+  "version": "6.1.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,17 +14,17 @@
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "cheerio": "^1.0.0",
-    "zod": "^3.23.8"
+    "leaflet": "^1.9.4"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.9.1",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "@types/leaflet": "^1.9.9",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.2",
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0"
+    "typescript": "^5.6.2"
   }
 }
