--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   },
   "engines": { "node": ">=20 <21" },
   "dependencies": {
-    "next": "15.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "zod": "^3.23.8",
-    "cheerio": "^1.0.0",
-    "leaflet": "^1.9.4",
-    "openai": "^4.56.0"
-  },
-  "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.9.1",
-    "@types/leaflet": "^1.9.9",
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.2"
-  }
+  "next": "15.0.0",
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
+  "zod": "^3.23.8",
+  "cheerio": "^1.0.0-rc.12",
+  "leaflet": "^1.9.4",
+  "openai": "^4.69.0"
+},
+"devDependencies": {
+  "@types/leaflet": "^1.9.12",
+  "autoprefixer": "^10.4.20",
+  "postcss": "^8.4.47",
+  "tailwindcss": "^3.4.14",
+  "typescript": "^5.6.2",
+  "@types/node": "^22.7.4",
+  "@types/react": "^18.3.8",
+  "@types/react-dom": "^18.3.0",
+  "@netlify/plugin-nextjs": "^5.9.1"
+}
 }
