--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   },
   "engines": { "node": ">=20 <21" },
   "dependencies": {
-  "next": "15.0.0",
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
-  "zod": "^3.23.8",
-  "cheerio": "^1.0.0-rc.12",
-  "leaflet": "^1.9.4",
-  "openai": "^4.69.0"
-},
+    "next": "15.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "cheerio": "^1.0.0",
+    "zod": "^3.23.8"
+  },
 "devDependencies": {
   "@types/leaflet": "^1.9.12",
   "autoprefixer": "^10.4.20",
